# babbys-first-alien-abduction

./: Cargo.toml  README.md  todo.txt
.cargo/: config.toml
src/: constants.rs  main.rs  utils.rs
src/components/: markers.rs  mod.rs  position.rs  tile.rs
src/enums/: game_state.rs  mod.rs  tile_state.rs
src/newtypes/: mod.rs  score.rs  sugar.rs
src/plugins/: mod.rs  on_enter_playing_plugin.rs  on_game_over_plugin.rs  on_update_playing_plugin.rs
src/resources/: cake.rs  game.rs  game_camera.rs  mod.rs  player.rs
src/structs/: board.rs
src/systems/: doom_random_tile.rs  eat_cake.rs  end_game_if_player_falls.rs  focus_camera.rs  handle_player_movement.rs  make_cake_descend_from_sky_like_ufo.rs  make_falling_entities_fall.rs  mess_with_board.rs  mod.rs  rotate_cake.rs  spawn_cake.rs  update_scoreboard.rs
src/systems/game_over/: clean_up_scene.rs  display_score.rs  handle_play_again.rs  mod.rs
src/systems/setup/: mod.rs  setup_ambient_lighting.rs  setup_board.rs  setup_cake.rs  setup_cameras.rs  setup_game.rs  setup_player.rs  setup_scoreboard.rs
