[package]
authors = ["worstpractice <54796463+worstpractice@users.noreply.github.com>"]
edition = "2018"
name    = "babbys_first_alien_abduction"
version = "0.1.0"

[dependencies]
bevy = "0.5.0"
bevy_easings = "0.4.0"
rand = "0.8.3"
winit = "0.24.0"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
codegen-units    = 1
debug-assertions = false
incremental      = false
opt-level        = 3
overflow-checks  = false

[profile.dev]
codegen-units    = 1024
debug-assertions = true
incremental      = true
lto              = "off"
opt-level        = 0
overflow-checks  = true


[profile.release]
codegen-units    = 1
debug-assertions = false
incremental      = false
lto              = "fat"
opt-level        = 3
overflow-checks  = false
